--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wgpu = { version = "0.15", features = ["webgl"] }
+# wgpu = { version = "0.15", features = ["webgl"] }
+wgpu = { version = "0.15" }
 winit = { version = "0.28"}
 wasm_thread = { version = "0.2" }
 wasm-bindgen = { version = "0.2" }
@@ -38,3 +39,7 @@ features = [
 [profile.release]
 opt-level = "s"
 debug = 1
+
+[features]
+singlethread = ["wgpu?/webgl"]
+
